fix mapTile on chrono on mobile

--- a/src/dashboards/Chrono/MapTile/styles.scss
+++ b/src/dashboards/Chrono/MapTile/styles.scss
@@ -2,8 +2,8 @@
 @import '../../../variables.scss';
 
 .chrono .maptile {
-    height: 39.375rem;
-    width: 100%;
+    height: inherit;
+    width: inherit;
     background-color: var(--tavla-box-background-color);
     color: var(--tavla-font-color);
     flex: none;
@@ -29,5 +29,9 @@
         display: flex;
         align-items: center;
         color: var(--colors-blues-blue60);
+    }
+
+    @media (max-width: 1000px) {
+        height: 39.375rem;
     }
 }
